--- a/multisplit.html
+++ b/multisplit.html
@@ -121,7 +121,7 @@
     <div class="primeiraimg">
         <a href="energiasolar.html">
         <img src="img/energiasolar1.jpg" alt="">
-        <div><p>AR CONDICIONADO TCL MULTISPLIT...</p>
+        <div><p>TCL Energia Solar...</p>
             <div class="estrelaavaliacaosemelhante">
                 <div>
                     <span class="estrela" data-valor="1">&#9733;</span>
@@ -145,7 +145,7 @@
     <div class="segundaimg">
         <a href="energiasolar.html">
         <img src="img/energiasolar2.jpeg" alt="">
-        <div><p>AR CONDICIONADO SIMPLY MULTISPLIT...</p>
+        <div><p>SIMPLY Energia Solar...</p>
             <div class="estrelaavaliacaosemelhante">
                 <div>
                     <span class="estrela" data-valor="1">&#9733;</span>
@@ -169,7 +169,7 @@
     <div class="terceiraimg">
         <a href="energiasolar.html">
         <img src="img/energiasolar3.jpg" alt="">
-        <div><p>AR CONDICIONADO PHILLIP MULTISPLIT...</p>
+        <div><p>PHILLIP Energia Solar...</p>
             <div class="estrelaavaliacaosemelhante">
                 <div>
                     <span class="estrela" data-valor="1">&#9733;</span>
@@ -193,7 +193,7 @@
     <div class="quartimg">
         <a href="energiasolar.html">
         <img src="img/energiasolar4.jpeg" alt="">
-        <div><p>AR CONDICIONADO COP MULTISPLIT...</p>
+        <div><p>COP Energia Solar...</p>
             <div class="estrelaavaliacaosemelhante">
                 <div>
                     <span class="estrela" data-valor="1">&#9733;</span>
@@ -217,7 +217,7 @@
     <div class="ultimaimg">
         <a href="energiasolar.html">
         <img src="img/energiasolar5.jpg" alt="">
-        <div><p>AR CONDICIONADO AGRATO MULTISPLIT...</p>
+        <div><p>AGRATO Energia Solar...</p>
             <div class="estrelaavaliacaosemelhante">
                 <div>
                     <span class="estrela" data-valor="1">&#9733;</span>
