--- a/index.html
+++ b/index.html
@@ -143,7 +143,7 @@
         <div class="produtos4">
             <div id="produto4">
                     <h1>PRODUTOS</h1>
-                    <img src="img/linha.svg" alt=""></div>
+                   </div>
         
              <nav>
                     <div id="linkangular">
