--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         <div class="conteudoMenu">
             <nav id="logo"><img src="img/logoPequena.png" alt="Logo"></nav>
                 <div class="espaco">
-                 <a id="textoheader"><a id="home" href="#"> Home</a> <a href="#">Serviços</a> <a href="#">Sobre nós</a> <a href="produto4">Produtos</a> <a href="#">Contatos</a>
+                 <a id="textoheader"><a id="home" href="#"> Home</a> <a href="#produto3servico">Serviços</a> <a href="#sobrenos">Sobre nós</a> <a href="#produto4">Produtos</a> <a href="#imgform">Contatos</a>
                  </div></div>             
         </div>
     </header>
@@ -54,7 +54,7 @@
            <div class="texto"><h1>TEXTO</h1></div>
            <div class="texto"><h1>TEXTO</h1></div>
         </div>
-        <div class="produto3servico">
+        <div class="produto3servico"><div id="produto3servico"></div>
             <p>Serviços</p>
             <img src="img/linha.svg" alt="">
         </div>
@@ -165,16 +165,16 @@
                                 <a href="arcondicionado.html"><img src="img/arcondiconadooo.jpg" alt=""></a>
                             </div>
                             <div>
-                                <img src="img/arcondicionadoo2.jpg" alt="">
+                                <a href="arcondicionado.html">  <img src="img/arcondicionadoo2.jpg" alt=""></a>
                             </div>
                             <div>
-                                <img src="img/arcondicionadooo3.jpg" alt="">
+                                <a href="arcondicionado.html">   <img src="img/arcondicionadooo3.jpg" alt=""></a>
                             </div>
                             <div>
-                                <img src="img/arcondicionadooo4.jpg" alt="">
+                                <a href="arcondicionado.html">   <img src="img/arcondicionadooo4.jpg" alt=""></a>
                             </div>
                             <div>
-                                <img src="img/arcondicionadooo5.png" alt="">
+                                <a href="arcondicionado.html"></a> <img src="img/arcondicionadooo5.png" alt=""></a>
                             </div>
                         </div>
                         <div class="img5ars" ng-show="inverter">
@@ -182,16 +182,16 @@
                              <a href="arcondicionadoinverter.html"><img src="img/inverter1.jfif" alt=""></a>
                             </div>
                             <div>
-                                <img src="img/inverter2.jfif" alt="">
+                                <a href="arcondicionadoinverter.html">   <img src="img/inverter2.jfif" alt=""></a>
                             </div>
                             <div>
-                                <img src="img/inverter3.jpg" alt="">
+                                <a href="arcondicionadoinverter.html">   <img src="img/inverter3.jpg" alt=""></a>
                             </div>
                             <div>
-                                <img src="img/inverter4.jfif" alt="">
+                                <a href="arcondicionadoinverter.html">   <img src="img/inverter4.jfif" alt=""></a>
                             </div>
                             <div>
-                                <img src="img/inverter5.jfif" alt="">
+                                <a href="arcondicionadoinverter.html">   <img src="img/inverter5.jfif" alt=""></a>
                             </div>
                         </div>
                         <div class="img5ars" ng-show="multisplit">
@@ -199,16 +199,16 @@
                            <a href="multisplit.html"><img src="img/multisplit1.png" alt=""></a> 
                             </div>
                             <div>
-                                <img src="img/multisplit2.jpg" alt="">
+                                <a href="multisplit.html"><img src="img/multisplit2.jpg" alt=""></a>
                             </div>
                             <div>
-                                <img src="img/multisplit3.png" alt="">
+                                <a href="multisplit.html"> <img src="img/multisplit3.png" alt=""></a>
                             </div>
                             <div>
-                                <img src="img/multisplit4.jpg" alt="">
+                                <a href="multisplit.html">   <img src="img/multisplit4.jpg" alt=""></a>
                             </div>
                             <div>
-                                <img src="img/multisplit5.jpg" alt="">
+                                <a href="multisplit.html">  <img src="img/multisplit5.jpg" alt=""></a>
                             </div>
                         </div>
                         <div class="img5ars" ng-show="energiasolar">
@@ -216,21 +216,21 @@
                         <a href="energiasolar.html"><img src="img/energiasolar1.jpg" alt=""></a>
                             </div>
                             <div>
-                                <img src="img/energiasolar2.jpeg" alt="">
+                                <a href="energiasolar.html"> <img src="img/energiasolar2.jpeg" alt=""></a>
                             </div>
                             <div>
-                                <img src="img/energiasolar3.jpg" alt="">
+                                <a href="energiasolar.html"><img src="img/energiasolar3.jpg" alt=""></a>
                             </div>
                             <div>
-                                <img src="img/energiasolar4.jpeg" alt="">
+                                <a href="energiasolar.html">  <img src="img/energiasolar4.jpeg" alt=""></a>
                             </div>
                             <div>
-                                <img src="img/energiasolar5.jpg" alt="">
+                                <a href="energiasolar.html"> <img src="img/energiasolar5.jpg" alt=""></a>
                             </div>
                         </div>
              </nav>
             </div>
-             <div class="form">
+             <div class="form"> 
                 <div id="imgform">
                     <img src="img/logoPequena.png" alt="">
                 </div>
