javascript precisa ser arrumado

--- a/arcondicionado.html
+++ b/arcondicionado.html
@@ -10,7 +10,7 @@
 <body ng-app="meuApp" ng-controller="meuController">
     <header>
         <div class="conteudoMenu">
-            <nav id="logo"><img src="img/logoPequena.png" alt="Logo"></nav>
+          <a href="index.html"><nav id="logo"><img src="img/logoPequena.png" alt="Logo"></nav></a>
                 <div class="espaco">
                  <a id="textoheader"><a id="home" href="index.html"> Home</a> <a href="#">Serviços</a> <a href="#">Sobre nós</a> <a href="#">Produtos</a> <a href="#">Contatos</a>
                  </div></div>             
@@ -25,11 +25,11 @@
                       </button> 
                       <a href="">compartilhar</a>  
                 </div>                                             
-                <div class="imgproduto" ng-show="arcondicionado"><img src="img/arcondiconadooo.jpg" alt=""></div>
+                <div onclick="trocar()" class="imgproduto" ng-show="arcondicionado"></div>
                 <div class="mesmoprodutoimgdiferentes">
                     <div class="img5ars" ng-show="arcondicionado">
                         <div>
-                            <a href="arcondicionado.html"><img src="img/arcondiconadooo.jpg" alt=""></a>
+                        <img src="img/arcondiconadooo.jpg" alt="">
                         </div>
                         <div>
                             <img src="img/arcondicionadoo2.jpg" alt="">
