--- a/energiasolar.html
+++ b/energiasolar.html
@@ -10,7 +10,7 @@
 <body ng-app="meuApp" ng-controller="meuController">
     <header>
         <div class="conteudoMenu">
-            <nav id="logo"><img src="img/logoPequena.png" alt="Logo"></nav>
+            <a href="index.html"><nav id="logo"><img src="img/logoPequena.png" alt="Logo"></nav></a>
                 <div class="espaco">
                  <a id="textoheader"><a id="home" href="index.html"> Home</a> <a href="#">Serviços</a> <a href="#">Sobre nós</a> <a href="#">Produtos</a> <a href="#">Contatos</a>
                  </div></div>             
