--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 <nav>
     <header>
         <div class="conteudoMenu">
-            <nav id="logo"><img src="img/logoPequena.png" alt="Logo"></nav>
+            <a href="index.html"><nav id="logo"><img src="img/logoPequena.png" alt="Logo"></nav></a>
                 <div class="espaco">
                  <a id="textoheader"><a id="home" href="#"> Home</a> <a href="#produto3servico">Serviços</a> <a href="#sobrenos">Sobre nós</a> <a href="#produto4">Produtos</a> <a href="#imgform">Contatos</a>
                  </div></div>             
